fix(style.css): grid gap
c'erano i gap di grid che erano diversi da quelli di flex,
li ho sistemati ora sono entrambi di 10px

--- a/style.css
+++ b/style.css
@@ -35,5 +35,5 @@ img {
     margin: 0;
     /* griglia adattiva */
     grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));    
-    gap: 5px 5px;
+    gap: 10px 10px;
 }
